# P4

./: .gitignore  README.md  main.cpp
PCA/: main.cpp
Project/beginner_tutorials/: CMakeLists.txt  package.xml
Project/beginner_tutorials/RGB/: readme.md
Project/beginner_tutorials/beginner_tutorials/: package.xml
Project/beginner_tutorials/beginner_tutorials/src/: thermal.cpp
Project/beginner_tutorials/launch/: project.launch
Project/beginner_tutorials/src/: RGB.cpp  asus.cpp  carsdetect.cpp  hello_turtle.cpp  listener.cpp  main.cpp  talker.cpp  thermal.cpp  thermal_new.cpp
Project/sensing_system/: CMakeLists.txt  package.xml
Project/sensing_system/launch/: project.launch
Project/sensing_system/msg/: thermalRect.msg
Project/sensing_system/src/: asus.cpp  carsdetect.cpp  hello_turtle.cpp  thermal.cpp
Sandbox/: Background extract  Test_stuff  main.cpp  nonzero.cpp  purpose.txt  something
Sandbox/BLOBclassification/FeatureDetector/: FeatureDetector.sln
Sandbox/BLOBclassification/FeatureDetector/FeatureDetector/: FeatureDetector.cpp  FeatureDetector.vcxproj  FeatureDetector.vcxproj.filters  stdafx.cpp
Sandbox/BLOBclassification/FeatureDetector/FeatureDetector/Debug/: FeatureDetector.pch  vc141.idb
Sandbox/BLOBclassification/FeatureDetector/FeatureDetector/Debug/FeatureDetector.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FeatureDetector.lastbuildstate
Sandbox/BLOBclassification/FeatureDetector/x64/Debug/: FeatureDetector.ilk
Sandbox/Perc5_mar21/: Perc5_mar21.cpp  Perc5_mar21.vcxproj  Perc5_mar21.vcxproj.filters  main.cpp  stdafx.cpp
Sandbox/Perc5_mar21/Debug/: Perc5_mar21.pch  vc141.idb
Sandbox/Perc5_mar21/Debug/Perc5_mar21.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Perc5_mar21.lastbuildstate
Sandbox/Perc5_mar21/x64/Debug/: Perc5_mar21.pch  perc5_mar21.obj.enc  vc141.idb
Sandbox/Perc5_mar21/x64/Debug/Perc5_mar21.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Perc5_mar21.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sandbox/RGBmodule/: carsdetect.cpp  readme
Sandbox/Sensors/: SerialCom
Sandbox/Sensors/Lidar/Reading packets/: ConsoleApplication11.sln
Sandbox/Sensors/Lidar/Reading packets/ConsoleApplication11/: ConsoleApplication11.cpp  ConsoleApplication11.vcxproj
Sandbox/Sensors/RGB camera/ConsoleApplication7/: ConsoleApplication5.sln
Sandbox/Sensors/RGB camera/ConsoleApplication7/ConsoleApplication5/: ConsoleApplication5.cpp  ConsoleApplication5.vcxproj
Sandbox/Sensors/Thermal Camera/thermalcamv3/: thermalcamv3.sln
Sandbox/Sensors/Thermal Camera/thermalcamv3/thermalcamv3/: stdafx.cpp  thermalcamv3.cpp  thermalcamv3.vcxproj  thermalcamv3.vcxproj.filters
Sandbox/Sensors/Thermal2/: main.cpp  thermalexp.cpp
Sandbox/Sensors/ThermalBox/: main.cpp
Sandbox/Thermal_people/: Thermal Box.sln
Sandbox/Thermal_people/Thermal Box/: Thermal Box.cpp  Thermal Box.vcxproj  Thermal Box.vcxproj.filters  stdafx.cpp
Sandbox/Thermal_people/Thermal Box/x64/Debug/: Thermal Box.pch  vc141.idb
Sandbox/Thermal_people/x64/Debug/: Thermal Box.ilk
Sandbox/beginner_tutorials/: CMakeLists.txt  package.xml
Sandbox/beginner_tutorials/src/: main.cpp  thermal.cpp
(+54 files in other folders)
